# skud

./: .gitignore  Dockerfile  Dockerfile_  add_ssl_cert_script.py  docker-compose.yml  entrypoint.sh  intall_read.txt  pyproject.toml  req.txt  requirements.txt  style.ccs
app_camera/: admin.py  apps.py  forms.py  http_long.py  models.py  tasks.py
app_camera/management/commands/: restart_HTTP_long_macroscope.py  zen.py
app_controller/: admin.py  apps.py  controller_signals.py  forms.py  functions_working_database.py  handlers.py  models.py  serializers.py  server_signals.py  tests.py  urls.py  views.py
app_controller/migrations/: 0001_initial.py  0002_initial.py  0003_alter_event_controller_alter_event_event_initiator.py
app_observer/: admin.py  apps.py  models.py
app_skud/: admin.py  api_views.py  apps.py  consumers.py  f_export_from_DB.py  forms.py  get_request.py  models.py  permissions.py  routing.py  serializers.py  tests.py  urls.py  utilities.py  utils_to_microscope.py  view.py  views.py
app_skud/migrations/: 0001_initial.py  0002_alter_monitorcheckaccess_controller_and_more.py  0003_monitorcheckaccess_data_monitor.py  0004_alter_staffs_car_number.py  0005_staffs_employee_photo.py  0006_alter_monitorcheckaccess_controller_and_more.py
app_telegram/: admin.py  apps.py  bot_database.py  bot_model.py  main.py  models.py
app_time_profile/: admin.py  apps.py  models.py
core/: api_urls.py  asgi.py  celery.py  settings.py  urls.py
nginx/: nginx.conf
static/css/: styles.css  table_style.css
static/js/: helper_functions.js  table.js  сlock.js
(+36 files in other folders)
