[tool.poetry]
name = "skud"
version = "0.1.0"
description = ""
authors = ["RomanL"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
gunicorn = "^20.1.0"
pillow = "^9.4.0"
webhook-listener = "^1.2.0"
djangorestframework = "^3.14.0"
django-rest-framework-roles = "^0.6"
rest-framework-roles = "^1.0.3"
django-api-admin = "^1.0.3"
django-restful-admin = "^1.1.3"
channels = "^4.0.0"
daphne = "^4.0.0"
requests = "^2.28.2"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
aiohttp = "^3.8.4"
channels-redis = "^4.0.0"
psycopg2 = "^2.9.5"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
